# chopt-test-task

./: README.md  chopt-test-task.cabal  node_list.txt  nodelist.txt  runTests.sh  runTestsContinuously.sh  run_tests.sh  run_tests_continuously.sh  stack.yaml
scripts/: run_tests_and_hang.sh
src/: Algorithm.hs  Config.hs  Interpreter.hs  Log.hs  Main.hs  Message.hs  Program.hs
src/Control/Concurrent/: MyExtra.hs
src/Control/Monad/: MyExtra.hs
src/Data/Binary/: Strict.hs
src/Network/Transport/: MyExtra.hs
src/Network/Transport/TCP/: Address.hs
src/Text/: Parsable.hs
