name:                chopt-test-task
version:             0.1.0.0
synopsis:            An implementation of the CH/OTP Test Task
description:         see https://iohk.io/careers/tests/haskell-developer-test for details
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable chopt-test-task
  main-is:             Main.hs
  other-modules:       Config
  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , doctest
                     , distributed-process
                     , network-transport
                     , network-transport-tcp
                     , optparse-applicative
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -W -Wall
